@@ -154,6 +154,11 @@ GameStatus ControlPhase(int numFrames)
 		// which assumes 30 iterations per second.
 		g_GameScript->OnControlPhase(DELTA_TIME);
 
+		// Control lock is processed after handling scripts, because builder may want to
+		// process input externally, while still locking Lara from input.
+		if (!isTitle && Lara.Control.Locked)
+			ClearAllActions();
+
 		// Handle inventory / pause / load / save screens.
 		auto result = HandleMenuCalls(isTitle);
 		if (result != GameStatus::None)
@@ -591,15 +596,8 @@ void HandleControls(bool isTitle)
 	// Poll input devices and update input variables.
 	if (!isTitle)
 	{
-		if (Lara.Control.Locked)
-		{
-			ClearAllActions();
-		}
-		else
-		{
-			// TODO: To allow cutscene skipping later, don't clear Deselect action.
-			UpdateInputActions(LaraItem, true);
-		}
+		// TODO: To allow cutscene skipping later, don't clear Deselect action.
+		UpdateInputActions(LaraItem, true);
 	}
 	else
 	{
