@@ -127,6 +127,26 @@ int LaraObject::GetStamina() const
 	return lara->Status.Stamina;
 }
 
+/// Set control lock for Lara.
+// @function LaraObject:SetControlLock
+// @tparam bool whether set or not set control lock. 
+// @usage
+// Lara:SetControlLock(true)
+void LaraObject::SetControlLock(bool value)
+{
+	GetLaraInfo(m_item)->Control.Locked = value;
+}
+
+/// Get control lock for Lara.
+// @function LaraObject:GetControlLock
+// @treturn bool current control lock value
+// @usage
+// local areControlsLocked = Lara:GetControlLock()
+bool LaraObject::GetControlLock() const
+{
+	return GetLaraInfo(m_item)->Control.Locked;
+}
+
 /// Get the moveable's airborne status
 // @function Moveable:GetAirborne
 // @treturn (bool) true if Lara state must react to aerial forces.
