@@ -44,6 +44,8 @@ public:
 	int GetWet() const;
 	[[nodiscard]] bool GetAirborne() const;
 	void SetAirborne(bool newAirborne);
+	bool GetControlLock() const;
+	void SetControlLock(bool value);
 	std::unique_ptr<Moveable> GetVehicle() const;
 	std::unique_ptr<Moveable> GetTarget() const;
 	HandStatus GetHandStatus() const;
