@@ -18,6 +18,7 @@ Version 1.1.1
  - A negative value requires a trigger to activate.
 
 Lua API changes:
+* Add Lara::GetControlLock() and Lara::SetControlLock() functions to handle controls locking.
 * Make Vec2 object float-based instead of integer-based.
 * Add Vec2 arithmetic for division with a number and multiplication with another Vec2.
 
